add new command

--- a/src/beamercolorthemeTottori.sty
+++ b/src/beamercolorthemeTottori.sty
@@ -60,5 +60,6 @@
 {\begin{tcolorbox}[alerted, title=#1]}
 {\end{tcolorbox}}
 
+\newcommand\setbasecolor[1]{\definecolor{basecolor}{HTML}{#1}}
 
 \mode<all>
