--- a/src/beamerouterthemeTottori.sty
+++ b/src/beamerouterthemeTottori.sty
@@ -45,7 +45,7 @@
 \defbeamertemplate*{footline}{Tottori}{%
     \usebeamerfont{footline}%
     \begin{beamercolorbox}[wd=\paperwidth,ht=2.25ex,dp=1ex,right,rightskip=0.5em]{structure}%
-        \usebeamercolor[bg]{structure}%
+        \usebeamercolor[fg]{structure}%
         \ifbeamer@framenumber
         {\usebeamerfont{framenumber}\insertframenumber{}}%~/~\inserttotalframenumber
         \fi
