--- a/src/beamerouterthemeTottori.sty
+++ b/src/beamerouterthemeTottori.sty
@@ -6,21 +6,24 @@
 \RequirePackage{xpatch}
 \setbeamertemplate{itemize item}{\scriptsize\raise2.0pt\hbox{\donotcoloroutermaths$\blacksquare$}}
 \setbeamertemplate{itemize subitem}{\scriptsize\raise1.5pt\hbox{\donotcoloroutermaths$\bullet$}}
-\setbeamertemplate{itemize subsubitem}{\scriptsize\raise1.5pt\hbox{\donotcoloroutermaths$\blacktriangleright$}}
-\setbeamertemplate{itemize subsubsubitem}{\tiny\raise1.5pt\hbox{\donotcoloroutermaths$-$}}
+\setbeamertemplate{itemize subsubitem}{\scriptsize\raise1.25pt\hbox{\donotcoloroutermaths$\blacktriangleright$}}
+
+\setbeamertemplate{enumerate item}{\usebeamercolor[bg]{item projected}\raisebox{1.5pt}{\colorbox{bg}{\color{fg}\footnotesize\insertenumlabel}}}
+\setbeamertemplate{enumerate subitem}{\usebeamercolor[bg]{item projected}\raisebox{1.25pt}{\colorbox{bg}{\color{fg}\footnotesize\insertenumlabel}}}
+\setbeamertemplate{enumerate subsubitem}{\usebeamercolor[bg]{item projected}\raisebox{1.0pt}{\colorbox{bg}{\color{fg}\tiny\insertenumlabel}}}
 
 \settowidth{\leftmargini}{\usebeamertemplate{itemize item}}
 \addtolength{\leftmargini}{\labelsep}
 \settowidth{\leftmarginii}{\usebeamertemplate{itemize subitem}}
-\addtolength{\leftmarginii}{2\labelsep}
+\addtolength{\leftmarginii}{\labelsep}
 
 \xpatchcmd{\itemize}
 {\def\makelabel}
 {\ifnum\@itemdepth=1\relax
-    \setlength\itemsep{1ex}% separation for first level
+    \setlength\itemsep{0.25ex}% separation for first level
     \else
     \ifnum\@itemdepth=2\relax
-    \setlength\itemsep{0.5ex}% separation for second level
+    \setlength\itemsep{0.25ex}% separation for second level
     \else
     \ifnum\@itemdepth=3\relax
     \setlength\itemsep{0.25ex}% separation for third level
