change alerted text color

--- a/src/beamercolorthemeTottori.sty
+++ b/src/beamercolorthemeTottori.sty
@@ -17,6 +17,7 @@
 \setbeamercolor{footline}{fg=white,bg=basecolor!60!black}
 \setbeamercolor{headline}{fg=white,bg=basecolor!60!black}
 \setbeamercolor{frametitle}{fg=white,bg=basecolor}
+\setbeamercolor{alerted text}{fg=alertedcolor!60!black}
 
 \tcbset{%
     enhanced,
