--- a/src/beamercolorthemeTottori.sty
+++ b/src/beamercolorthemeTottori.sty
@@ -60,7 +60,7 @@
 \renewenvironment<>{exampleblock}[1]
 {\begin{tcolorbox}[example, title=#1]}
 {\end{tcolorbox}}
-\renewenvironment<>{alertedblock}[1]
+\renewenvironment<>{alertblock}[1]
 {\begin{tcolorbox}[alerted, title=#1]}
 {\end{tcolorbox}}
 
