--- a/src/beamerinnerthemeTottori.sty
+++ b/src/beamerinnerthemeTottori.sty
@@ -11,7 +11,7 @@
     \thispagestyle{empty}
     \vfill%
     \vskip2ex
-    \begin{columns}
+    \begin{beamercolorbox}[wd=\paperwidth, ht=\paperheight]{title}
         \begin{column}{0.8\paperwidth}
             \usebeamerfont{title}\usebeamercolor[fg]{title}\inserttitle\par%
             \ifx\insertsubtitle\@empty%
@@ -42,7 +42,7 @@
             {\raggedleft\usebeamercolor[fg]{titlegraphic}\inserttitle}%
             \fi%
         \end{column}
-    \end{columns}
+    \end{beamercolorbox}
     \vfill%
 }
 
